# Wireshark-Waveform-Plugin

./: .aderc  .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  example.vcd  wikipedia_example.vcd
.github/workflows/: archlinux.yml  centos.yml  ci.yml  docker.yml  opensuse.yml  ubuntu.yml
doc/: WiresharkWaveformPlugin.drawio  header.tex
scripts/: .aderc-archlinux  .aderc-centos  .aderc-opensuse  .aderc-tumbleweed  .aderc-ubuntu-focal  .aderc-ubuntu-jammy  .aderc-ubuntu-noble  Dockerfile-wireshark  Dockerfile-wireshark-archlinux  Dockerfile-wireshark-centos  Dockerfile-wireshark-opensuse-tumbleweed  Dockerfile-wireshark-ubuntu-focal  Dockerfile-wireshark-ubuntu-jammy  Dockerfile-wireshark-ubuntu-noble  apt-packages-wireshark  bashrc-git-prompt  build.sh  entrypoint  entrypoint-non-debian  env.sh  run-clang-format.py
vcd/: CMakeLists.txt  vcd.c  vcd.cpp  vcd.hpp  vcd_file_input.hpp  vcd_parser.cpp  vcd_parser.hpp  vcd_plugin.cpp  vcd_plugin.hpp
waveform/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
